--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,24 +15,11 @@
 <div class="container">
     <br /><br />
     <div class="starter-template">
-        <h1>SecureBones</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br /> All you get is this text and a mostly barebones HTML document.</p>
-    </div>
-    Logged in User:
-    <div sec:authentication="name">
-        The value of the "name" property of the authentication object should appear here.
-    </div>
-    <div sec:authorize="isAuthenticated()">
-        This content is only shown to authenticated users.<br />
-        Logged user: <span sec:authentication="name">Bob</span>
-        Roles: <span sec:authentication="principal.authorities">[ROLE_USER, ROLE_ADMIN]</span>
-    </div>
-    <div sec:authorize="hasAuthority('ADMIN')" >
-        This content is only shown to administrators.
-    </div>
-    <div sec:authorize="hasAuthority('USER')" >
-        This content is only shown to users.
-    </div>
+        <h1>Welcome to the home page.</h1>
+         </div>
+
+
+
 
 </div><!-- /.container -->
 
