--- a/src/main/resources/templates/memez.html
+++ b/src/main/resources/templates/memez.html
@@ -15,7 +15,7 @@
             width: 400px;
             position: relative;
         }
-        #image {
+        #photo {
             position: absolute;
             left: 0;
             top: 0;
@@ -51,7 +51,7 @@
 
 
 <div id="container">
-    <div id ="image"  th:utext="${meme.imageUrl}">
+    <div id ="photo"  th:utext="${meme.imageUrl}">
     </div>
     <p id= "top" th:text="${meme.top}">Top text</p>
     <p id= "bottom" th:text="${meme.bottom}">Bottom text</p>
