--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -8,7 +8,7 @@
 <th:block th:replace="base :: navbar"></th:block>
 <div class="container">
     <h1>Spring Boot file upload example</h1>
-    <form th:object="${image}" method="POST" action="/upload" enctype="multipart/form-data">
+    <form th:object="${photo}" method="POST" action="/upload" enctype="multipart/form-data">
         <input type="file" name="file"/><br/><br/>
         <input type="text" name="caption" th:field="*{caption}"/><br/>
         <input type="submit" value="Submit"/>
@@ -19,14 +19,14 @@
 
 
     <div class="row">
-        <th:block th:each="image: ${imageList}">
+        <th:block th:each="photo: ${photoList}">
             <div class="col-md-3">
 
-                <div th:utext="${image.imgsrc}">
+                <div th:utext="${photo.photosrc}">
 
                 </div>
 
-                <p th:text="${image.caption}">Caption</p>
+                <p th:text="${photo.caption}">Caption</p>
             </div>
         </th:block>
     </div>
