--- a/src/main/resources/templates/viewmemes.html
+++ b/src/main/resources/templates/viewmemes.html
@@ -67,7 +67,7 @@
             <div th:text="${ 'memez_memez.herokuapp.com/showmemes/'+{meme.id} }">
             </div>
             <div id="container">
-                <a th:href="@{'/showmeme/'+${meme.id}}"><div id ="photo"  th:utext="${meme.imageUrl}">
+                <a th:href="@{'/showmemes/'+${meme.id}}"><div id ="photo"  th:utext="${meme.imageUrl}">
                 </div></a>
 
 
