--- a/src/main/resources/templates/viewmemes.html
+++ b/src/main/resources/templates/viewmemes.html
@@ -74,7 +74,8 @@
                 </div>
             <p id= "top" th:text="${meme.top}">Top text</p>
             <p id= "bottom" th:text="${meme.bottom}">Bottom text</p>
-
+           LIKE
+            UNLIKE
             </div>
 
     </th:block>
