--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -18,7 +18,7 @@
 <body>
 <div class="navbar-wrapper">
     <div class="container">
-        <nav class="navbar navbar-inverse navbar-static-top" th:fragment="navbar">
+        <nav class="navbar navbar-nav navbar-static-top" th:fragment="navbar">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -27,11 +27,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Meme Maker</a>
+                    <a class="navbar-brand" href="/">Instapop</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home</a></li>
                         <th:block sec:authorize="isAnonymous()">
                             <li><a href="/login">Login</a></li>
                             <li><a href="/register">Register</a></li>
@@ -40,10 +39,10 @@
                         <th:block sec:authorize="isAuthenticated()">
                             <li><a href="/logout">Logout</a></li>
                             <th:block sec:authorize="hasAuthority('ADMIN')">
-                                <li><a href="/upload">Upload Image</a></li>
+                                <li><a href="/upload">Likes</a></li>
                             </th:block>
-                            <li><a href="/meme_maker">Meme Maker</a></li>
-                            <li><a href="/memes">View Memes</a></li>
+                            <li><a href="/meme_maker">Likes</a></li>
+
                         </th:block>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
