--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -7,7 +7,7 @@
 <br/><br/>
 <th:block th:replace="base :: navbar"></th:block>
 <div class="container">
-    <h1>Spring Boot file upload example</h1>
+    <h1>Upload</h1>
     <form th:object="${photo}" method="POST" action="/upload" enctype="multipart/form-data">
         <input type="file" name="file"/><br/><br/>
         <input type="text" name="caption" th:field="*{caption}"/><br/>
@@ -17,8 +17,15 @@
         <h2 th:text="${message}"/><br/><br/>
     </div>
 
+<div class="row">
+    <div th:utext="${sizedimageurl}">
+
+    </div>
+</div>
+
 
     <div class="row">
+        <h2>Filters</h2>
         <th:block th:each="photo: ${photoList}">
             <div class="col-md-3">
 
