--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -27,30 +27,24 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">Instapop</a>
+                    <a class="navbar-brand" href="/"><h1>INSTAPOP</h1></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav nav-justified>
                         <th:block sec:authorize="isAnonymous()">
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Register</a></li>
+                            <li><a href="/login"><h1>Login</h1></a></li>
+                            <li><a href="/register"><h1>Register</h1></a></li>
                         </th:block>
 
                         <th:block sec:authorize="isAuthenticated()">
-                            <li><a href="/logout">Logout</a></li>
+                            <li><a href="/logout"><h1>Logout</h1></a></li>
                             <th:block sec:authorize="hasAuthority('ADMIN')">
-                                <li><a href="/upload">Likes</a></li>
+                                <li><a href="/upload"><h1>Likes</h1></a></li>
                             </th:block>
 
 
                         </th:block>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" sec:authorize="isAuthenticated()">Update</a></li>
-                                <li><a href="#" sec:authorize="isAuthenticated()">Delete Image</a></li>
-                            </ul>
-                        </li>
+
                     </ul>
                 </div>
             </div>
