--- a/src/main/resources/templates/myfriends.html
+++ b/src/main/resources/templates/myfriends.html
@@ -27,8 +27,12 @@
 
         </th:block>
 
-    </div>
-
+        </div>
+    <form th:object="${action}" method="POST" action="/comment" enctype="multipart/form-data">
+        <label for="content">Comment</label>
+        <input type="text" name="content" id="content" th:field="*{content}"/><br/>
+        <input type="submit" value="Submit"/>
+    </form>
 </div>
 
 
