--- a/src/main/resources/templates/myfriends.html
+++ b/src/main/resources/templates/myfriends.html
@@ -28,11 +28,7 @@
         </th:block>
 
         </div>
-    <form th:object="${action}" method="POST" action="/comment" enctype="multipart/form-data">
-        <label for="content">Comment</label>
-        <input type="text" name="content" id="content" th:field="*{content}"/><br/>
-        <input type="submit" value="Submit"/>
-    </form>
+<p th:utext="${content}"></p>
 </div>
 
 
