--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -10,8 +10,8 @@
     <h3>Upload</h3>
     <form th:object="${photo}" method="POST" action="/upload" enctype="multipart/form-data">
         <input type="file" name="file"/><br/><br/>
-        <label for="caption">Caption</label>
-        <input type="text" name="caption" id="caption" th:field="*{caption}"/><br/>
+        <label>Caption</label>
+        <input type="text" name="caption" th:field="*{caption}"/><br/>
         <input type="submit" value="Submit"/>
     </form>
     <div th:if="${message}">
@@ -51,11 +51,7 @@
         </div>
         </th:block>
     </div>
-    <form th:object="${action}" method="POST" action="/comment" enctype="multipart/form-data">
-        <label for="content">Comment</label>
-        <input type="text" name="content" id="content" th:field="*{content}"/><br/>
-        <input type="submit" value="Submit"/>
-    </form>
+
 </div>
 
 
