--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -41,6 +41,7 @@
                             <li><a href="/logout"><h3>Logout</h3></a></li>
                             <th:block sec:authorize="hasAuthority('ADMIN')">
                                 <li><a href="/upload"><h3>Likes</h3></a></li>
+                                <li><a href="/makepost"><h3>Make post</h3></a></li>
                             </th:block>
 
 
