--- a/src/main/resources/templates/mypost.html
+++ b/src/main/resources/templates/mypost.html
@@ -10,17 +10,27 @@
     <title>Meme Maker</title>
 </head>
 <body>
-<br/><br/><br/><br/>
+<br /><br />
 
-    <div class="container">
 
-        <form th:object="${meme}" method="POST" action="/new_meme">
-                      <input type="hidden" th:value="${meme.imageUrl}"  name="imageUrl"/>
-            <th:block th:utext="${meme.imageUrl}"></th:block>
-            <input type="submit" value="Make the post"/>
-        </form>
+<div class="container">
+
+    <div class="row">
+
+        <th:block th:each="photo: ${photoList}">
+
+            <div class="col-sm-3">
+
+                <a th:href="@{'/makepost/' + ${photo.id} }" th:utext="${photo.photosrc}"></a>
+
+            </div>
+
+        </th:block>
 
     </div>
+
+</div>
+
 
 </body>
 </html>
