--- a/src/main/resources/templates/meme_maker.html
+++ b/src/main/resources/templates/meme_maker.html
@@ -19,7 +19,7 @@
 
         <th:block th:each="photo: ${photoList}">
 
-            <div class="col-sm-3">
+            <div class="col-md-3">
 
                 <a th:href="@{'/makepost/' + ${photo.id} }" th:utext="${photo.photosrc}"></a>
 
