--- a/src/main/resources/templates/mypost.html
+++ b/src/main/resources/templates/mypost.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Meme Maker</title>
+    <title>My post</title>
 </head>
 <body>
 <br /><br />
@@ -19,7 +19,7 @@
 
         <th:block th:each="photo: ${photoList}">
 
-            <div class="col-sm-3">
+            <div class="col-md-3">
 
                 <a th:href="@{'/makepost/' + ${photo.id} }" th:utext="${photo.photosrc}"></a>
 
