--- a/src/main/resources/templates/postconfirm.html
+++ b/src/main/resources/templates/postconfirm.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title><h3>My filter</h3></title>
+    <title>My filter</title>
 </head>
 <body>
 <br/><br/><br/><br/>
