differentiated between photos and photolist

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -30,7 +30,7 @@
                     <a class="navbar-brand" href="/"><h3>INSTAPOP</h3></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav nav-justified">
+                    <ul class="navbar nav-justified">
 
                         <th:block sec:authorize="isAnonymous()">
                             <li><a href="/login"><h3>Login</h3></a></li>
