--- a/src/main/resources/templates/meme_maker.html
+++ b/src/main/resources/templates/meme_maker.html
@@ -17,7 +17,7 @@
 
     <div class="row">
 
-        <th:block th:each="photo: ${photoList}">
+        <th:block th:each="photo: ${photos}">
 
             <div class="col-md-3">
 
