added getters and setters for users and photos

--- a/src/main/resources/templates/myfriends.html
+++ b/src/main/resources/templates/myfriends.html
@@ -24,6 +24,7 @@
                 <a th:utext="${friend.username}"></a>
 
             </div>
+            <a th:utext="${userlike}"></a>
 
         </th:block>
 
