--- a/src/main/resources/templates/postz.html
+++ b/src/main/resources/templates/postz.html
@@ -51,9 +51,17 @@
 
 
 <div id="container">
-    <div id ="photo"  th:utext="${meme.imageUrl}">
-    </div>
 
+
+        <th:block th:utext="${post.imageUrl}"></th:block>
+    <a th:href="@{'/like/'+${post.id}}" th:utext="Like"></a>
+    <div class = "checkbox checkbox-primary">
+        <input id = "checkbox2" class = "styled" type = "checkbox" checked>
+        <label for = "checkbox2">
+            Like
+        </label>
+        
+    </div>
 </div>
 </body>
 </html>
