--- a/src/main/resources/templates/viewposts.html
+++ b/src/main/resources/templates/viewposts.html
@@ -62,11 +62,11 @@
 
 
 <div class = "row">
-    <th:block th:each = "meme: ${memeList}">
+    <th:block th:each = "post: ${postList}">
         <div class= "col-md-3">
 
             <div id="container">
-                <a th:href="@{'/showposts/'+${meme.id}}"><div id ="photo"  th:utext="${meme.imageUrl}">
+                <a th:href="@{'/showposts/'+${post.id}}"><div id ="photo"  th:utext="${post.imageUrl}">
                 </div></a>
 
 
