Made path variable for like

--- a/src/main/resources/templates/postz.html
+++ b/src/main/resources/templates/postz.html
@@ -50,18 +50,18 @@
 <body>
 
 
-<div id="container">
+
 
 
         <th:block th:utext="${post.imageUrl}"></th:block>
-    <a th:href="@{'/like/'+${post.id}}" th:utext="Like"></a>
+
     <div class = "checkbox checkbox-primary">
-        <input id = "checkbox2" class = "styled" type = "checkbox" checked>
-        <label for = "checkbox2">
+        <input id = "check3" class = "styled" type = "checkbox" checked />
+        <label for = "check3">
             Like
         </label>
-        
+
     </div>
-</div>
+
 </body>
 </html>
