--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -32,7 +32,7 @@
     </a>
 
     </div>
-</div>
+
 
 
     <div class="row">
@@ -67,7 +67,7 @@
     </div>
 
 </div>
-
+</div> <!-----Container-->
 
 </body>
 <th:block th:replace="base :: footlinks"></th:block>
