--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -27,7 +27,7 @@
 
 <div class="row">
     <a th:href="@{'/makepost/1'}">
-        <div class ="photo"  th:utext="${sepiaimageurl}">
+        <div class ="photo"  th:utext="${sizedimageurl}">
         </div>
     </a>
 
