--- a/src/main/resources/templates/myfriends.html
+++ b/src/main/resources/templates/myfriends.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My friends</title>
+    <title>Users</title>
 </head>
 <body>
 <br /><br />
@@ -22,9 +22,14 @@
             <div class="col-md-3">
 
                 <a th:utext="${friend.username}"></a>
+                <a th:href="'/follow/'+${friend.id}" class = "btn btn-success">Follow</a>
 
             </div>
-            <a th:utext="${userlike}"></a>
+            <!---  FOLLOW-->
+
+
+
+            <!----FOLLOW0-->
 
         </th:block>
 
