Made upload show up

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -60,8 +60,8 @@
                         <th:block sec:authorize="isAuthenticated()">
                             <li><a href="/logout"><h3>Logout</h3></a></li>
                             <th:block sec:authorize="hasAuthority('ADMIN')">
-                                <li><a href="/upload"><h3>Add +</h3></a></li>
-                               
+                                <li><a href="/upload1"><h3>Add +</h3></a></li>
+
                             </th:block>
 
 
