--- a/src/main/resources/templates/uploadonetwo.html
+++ b/src/main/resources/templates/uploadonetwo.html
@@ -20,6 +20,18 @@
         <input type="file" name="file"/><br/><br/>
         <label>Caption</label>
         <input type="text" name="caption" th:field="*{caption}"/><br/>
+
+        <label>Filter</label>
+        <select th:field="*{value}">
+            <div>
+                <option value="0">No filter</option>
+                <option value="1">Sepia</option>
+                <option value="2">Pixelate</option>
+                <option value="3">Red</option>
+            </div>
+        </select>
+<br/>
+        <br/>
         <input type="submit" value="Submit"/>
     </form>
     <div th:if="${message}">
