Added comment box. still need to display comment

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -26,7 +26,7 @@
     </th:block>
 
 
-        <title>Meme Maker</title>
+        <title>Instapop</title>
 </head>
 <body>
 <nav class="navbar navbar-ct-blue navbar-fixed-top navbar-transparent" role="navigation" th:fragment ="navbar">
@@ -79,7 +79,7 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Meme Maker</h1>
+        <h1>Instapop</h1>
         <p class="lead"><br /> </p>
     </div>
 
